vagrant/yamlconfig/04/01_cert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: certificates
  labels:
    name: certificates
    env: dev
spec: {}
status: {}
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-shared-gw-to-ref-secrets
  namespace: certificates
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: shared-gw
  to:
  - group: ""
    kind: Secret    

# kubectl create secret tls gundamapp-tls --namespace certificates --key <path_to_key_file> --cert <path_to_cert_file>
