vagrant/yamlconfig/04/02_sharedgw_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-gw
spec: {}
status: {}
---
