vagrant/yamlconfig/04/02_sharedgw_aks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-gw
spec: {}
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gw-tls
  namespace: shared-gw
spec:
  gatewayClassName: envoy
  listeners:
  - protocol: HTTPS
    port: 443
    name: shared-gw-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - { key: kubernetes.io/metadata.name, operator: In, values: [gundam,demoapp] }
    tls:
     certificateRefs:
     - kind: Secret
       group: ""
       name: gundamapp-tls
       namespace: certificates
